<resources>
    <string name="app_name">BSilent Organizer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button">Button</string>
    <string name="background_image">Background Image</string>
    <string name="b_silent_logo">bSilentLogo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="next">NEXT</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_free">Register. \n It\'s free!</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">confirm password</string>
    <string name="or_line">OrLine</string>
    <string name="facebook_app_id">1728501367449001</string>
    <string name="fb_login_protocol_scheme">fb1728501367449001</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="localhost_init">http://localhost/init</string>
    <string name="label_activity_splashscreen">SplashScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_vibration_mode">Use Vibration Mode</string>
    <string name="silent_mode">Silent Mode</string>
    <string name="action_menu">Menu</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">ProfilePicture</string>
    <string name="silent_mode_manager">Silent Mode Manager</string>
    <string name="calendar">Calendar</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="notes">Notes</string>
    <string name="flashlight">Flashlight</string>
    <string name="use_in_background_mode">Use in Background Mode</string>
    <string name="title">Title</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="scan_your_qr_code">Scan your QR code</string>
    <string name="important">Important?</string>
    <string name="add_event">Add Event</string>
    <string name="new_event">New Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="about_bsilent">About bSilent</string>
    <string name="profile_link">Link to profile</string>

</resources>
