<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="bg.uni_ruse.stoyanov.bsilentorganizer.loginWithOrRegister">
    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="48sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <EditText
        android:id="@+id/userNameRegisterInputBox"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/username"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/register_label"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/passwordRegisterInputBox"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_below="@+id/userNameRegisterInputBox"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordConfirmRegisterInputBox"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_below="@+id/passwordRegisterInputBox"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/emailRegisterInputBox"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_below="@+id/passwordConfirmRegisterInputBox"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/emailRegisterInputBox"
        android:layout_below="@+id/emailRegisterInputBox"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textColor="@color/colorBlack"
        android:textSize="26sp" />
</RelativeLayout>
