<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:visibility="visible"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:background="@drawable/login_background"
    tools:context="bg.uni_ruse.stoyanov.bsilentorganizer.RegisterActivity">

    <ImageView
        android:id="@+id/logoImageReg"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:contentDescription="@string/b_silent_logo"
        android:foregroundGravity="center_horizontal|center"
        app:srcCompat="@drawable/b_silent_logo_no_bg" />

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/register_label_text_size"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/logoImageReg"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/userNameRegisterInputBox"
        android:layout_width="@dimen/input_box_width"
        android:layout_height="@dimen/input_box_height"
        android:layout_marginLeft="@dimen/input_box_side_margin"
        android:layout_marginRight="@dimen/input_box_side_margin"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/username"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/input_box_text_size"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/register_label"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/passwordRegisterInputBox"
        android:layout_width="@dimen/input_box_width"
        android:layout_height="@dimen/input_box_height"
        android:layout_below="@+id/userNameRegisterInputBox"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/input_box_side_margin"
        android:layout_marginRight="@dimen/input_box_side_margin"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/input_box_text_size" />

    <EditText
        android:id="@+id/passwordConfirmRegisterInputBox"
        android:layout_width="@dimen/input_box_width"
        android:layout_height="@dimen/input_box_height"
        android:layout_below="@+id/passwordRegisterInputBox"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/input_box_side_margin"
        android:layout_marginRight="@dimen/input_box_side_margin"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/input_box"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/input_box_text_size" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignStart="@+id/passwordConfirmRegisterInputBox"
        android:layout_below="@+id/passwordConfirmRegisterInputBox"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/login_button_states"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/button_text_size" />


</RelativeLayout>
